syntax = "proto3";

message UpdateViewRequest {
    string view_id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_desc { string desc = 3; };
    oneof one_of_thumbnail { string thumbnail = 4; };
}
